--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -175,3 +175,133 @@
 
 
 * 示例：（演示了交换变量函数使用引用、指针的对比）
+
+  * ```c++
+    // ch08_04_swaps.cpp -- swapping with references and with pointers
+    #include <iostream>
+    void swapr(int& a, int& b);
+    void swapp(int* p, int* q);
+    void swapv(int a, int b);
+    
+    int main() {
+    	using namespace std;
+    	int wallet1 = 300;
+    	int wallet2 = 350;
+    
+    	cout << "wallet1 = $" << wallet1;
+    	cout << " wallet2 = $" << wallet2 << endl;
+    
+    	cout << "Using references to swap contents:\n";
+    	swapr(wallet1, wallet2);
+    	cout << "wallet1 = $" << wallet1;
+    	cout << " wallet2 = $" << wallet2 << endl;
+    
+    	cout << "Using pointers to swap contents again:\n";
+    	swapp(&wallet1, &wallet2);
+    	cout << "wallet1 = $" << wallet1;
+    	cout << " wallet2 = $" << wallet2 << endl;
+    
+    	cout << "Trying to use passing by value:\n";
+    	swapv(wallet1, wallet2);
+    	cout << "wallet1 = $" << wallet1;
+    	cout << " wallet2 = $" << wallet2 << endl;
+    
+    	return 0;
+    }
+    
+    void swapr(int& a, int& b) {
+    	int temp;
+    
+    	temp = a;
+    	a = b;
+    	b = temp;
+    }
+    
+    void swapp(int* p, int* q) {
+    	int temp;
+    
+    	temp = *p;
+    	*p = *q;
+    	*q = temp;
+    }
+    
+    void swapv(int a, int b) {
+    	int temp;
+    
+    	temp = a;
+    	a = b;
+    	b = temp;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    wallet1 = $300 wallet2 = $350
+    Using references to swap contents:
+    wallet1 = $350 wallet2 = $300
+    Using pointers to swap contents again:
+    wallet1 = $300 wallet2 = $350
+    Trying to use passing by value:
+    wallet1 = $300 wallet2 = $350
+    ```
+
+  * 不同介绍在P260
+
+
+
+#### 8.2.3 引用的属性和特别之处
+
+* 示例：
+
+  * ```c++
+    // ch08_05_cubes.cpp -- regular and reference arguments
+    #include <iostream>
+    double cube(double a);
+    double refcube(double& ra);
+    
+    int main() {
+    	using namespace std;
+    	double x = 3.0;
+    
+    	cout << cube(x);
+    	cout << " = cube of " << x << endl;
+    
+    	cout << refcube(x);
+    	cout << " = cube of " << x << endl;
+    
+    	return 0;
+    }
+    
+    double cube(double a) {
+    	a *= a * a;
+    	return a;
+    }
+    
+    double refcube(double& ra) {
+    	ra *= ra * ra;
+    	return ra;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    27 = cube of 3
+    27 = cube of 27
+    ```
+
+  * 值得注意的地方：P261-P262
+
+    * 按值传递的输入参数可以是变量，也可以是表达式；
+    * 但是引用作为函数参数时，只能是变量，不可以是表达式。在引用const时，编译器才会在特定情况下创建表达式生成的临时变量，见P262。
+
+  * 应尽可能使用const：
+
+    * 使用 const 可以避免无意中修改数据的编程错误；
+    * 使用 const使函数能够处理 const 和非 const 实参，否则将只能接受非 const 数据；
+    * 使用 const 引用使函数能够正确生成并使用临时变量。
+
+
+
+#### 8.2.4 将引用用于结构
