--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -305,3 +305,142 @@
 
 
 #### 8.2.4 将引用用于结构
+
+* 使用结构引用参数的方式与使用基本变量引用相同，只需在声明结构参数时使用引用运算符&即可：
+
+  * ```c++
+    struct free_throws{
+        std::string name;
+        int made;
+        int attempts;
+        float percent;
+    };
+    ```
+
+  * 则可以如下编写函数原型，在函数中将指向该结构的引用作为参数：
+
+    * ```c++
+      void set_pc(free_throws & ft);
+      ```
+
+  * 如果不希望函数修改传入的结构，可使用const：
+
+    * ```c++
+      void display(const free_throws & ft);
+      ```
+
+* 示例：
+
+  * ```c++
+    // ch08_06_strtref.cpp -- using structure references
+    #include <iostream>
+    #include <string>
+    struct free_throws {
+    	std::string name;
+    	int made;
+    	int attempts;
+    	float percent;
+    };
+    
+    void display(const free_throws& ft);
+    void set_pc(free_throws& ft);
+    free_throws& accumulate(free_throws& target, const free_throws& source);
+    
+    int main() {
+    	free_throws one = { "Ifelsa Branch", 13, 14 };
+    	free_throws two = { "Andor Knott", 10, 16 };
+    	free_throws three = { "Minnie Max", 7, 9 };
+    	free_throws four = {"Whily Looper", 5, 9};
+    	free_throws five = {"Long Long", 6, 14};
+    	free_throws team = {"Throwgoods", 0, 0};
+    	free_throws dup;
+    
+    	set_pc(one);
+    	display(one);
+    	accumulate(team, one);
+    	display(team);
+    	display(accumulate(team, two));
+    	accumulate(accumulate(team, three), four);
+    	display(team);
+    
+    	dup = accumulate(team, five);
+    	std::cout << "Displaying team:\n";
+    	display(team);
+    	std::cout << "Displaying dup after assignment:\n";
+    	display(dup);
+    
+    	set_pc(four);
+    	accumulate(dup, five) = four;
+    	std::cout << "Displaying dup after ill-advised assignment:\n";
+    	display(dup);
+    
+    	return 0;
+    }
+    
+    void display(const free_throws& ft) {
+    	using std::cout;
+    	cout << "Name: " << ft.name << '\n';
+    	cout << " Made: " << ft.made << '\t';
+    	cout << "Attempts: " << ft.attempts << '\t';
+    	cout << "Percent: " << ft.percent << '\n';
+    }
+    
+    void set_pc(free_throws& ft) {
+    	if (ft.attempts != 0)
+    		ft.percent = 100.0f * float(ft.made) / float(ft.attempts);
+    	else
+    		ft.percent = 0;
+    }
+    
+    free_throws& accumulate(free_throws& target, const free_throws& source) {
+    	target.attempts += source.attempts;
+    	target.made += source.made;
+    	set_pc(target);
+    	return target;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Name: Ifelsa Branch
+     Made: 13       Attempts: 14    Percent: 92.8571
+    Name: Throwgoods
+     Made: 13       Attempts: 14    Percent: 92.8571
+    Name: Throwgoods
+     Made: 23       Attempts: 30    Percent: 76.6667
+    Name: Throwgoods
+     Made: 35       Attempts: 48    Percent: 72.9167
+    Displaying team:
+    Name: Throwgoods
+     Made: 41       Attempts: 62    Percent: 66.129
+    Displaying dup after assignment:
+    Name: Throwgoods
+     Made: 41       Attempts: 62    Percent: 66.129
+    Displaying dup after ill-advised assignment:
+    Name: Whily Looper
+     Made: 5        Attempts: 9     Percent: 55.5556
+    ```
+
+  * 如果返回类型被声明为 free throws 而不是free throws &，上述返回语将返回target (也就是team)的拷贝。但返回类型为引用，这意味着返回的是最初传递给accumulate()的team对象：
+
+    * ```c++
+      free_throws& accumulate(free_throws& target, const free_throws& source);
+      ```
+
+  * 为何要返回引用？
+
+    * P267：如果 accumulate0返回一个结构，而不是指向结构的引用，将把整个结构复制到一个临时位置，再将这个拷贝复制给 dup。但在返回值为引用时，将直接把team 复制到dup，其效率更高。
+
+  * 返回引用时需要注意的问题：
+
+    * 返回引用时最重要的一点是，应避免返回函数终止时不再存在的内存单元引用。（即避免函数返回一个指向临时变量的引用，函数运行完毕后它将不再存在）
+    * 改进办法见P268；
+
+  * 如何将const用于引用返回类型？
+
+    * 见P268。
+
+
+
+#### 8.2.5 将引用用于类对象
