--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -444,3 +444,100 @@
 
 
 #### 8.2.5 将引用用于类对象
+
+* 示例（使用 string 类）：
+
+  * ```c++
+    // ch08_07_strquote.cpp -- different designs
+    #include <iostream>
+    #include <string>
+    
+    using namespace std;
+    string version1(const string& s1, const string& s2);
+    const string& version2(string& s1, const string& s2);
+    const string& version3(string& s1, const string& s2);
+    
+    int main() {
+    	string input;
+    	string copy;
+    	string result;
+    
+    	cout << "Enter a string: ";
+    	getline(cin, input);
+    	copy = input;
+    	cout << "Your string as entered: " << input << endl;
+    	result = version1(input, "***");
+    	cout << "Your string enhanced: " << result << endl;
+    	cout << "Your original string: " << input << endl;
+    
+    	result = version2(input, "###");
+    	cout << "Your string enhanced: " << result << endl;
+    	cout << "Your original string: " << input << endl;
+    
+    	cout << "Resetting original string.\n";
+    	input = copy;
+    	result = version3(input, "@@@");
+    	cout << "Your string enhanced: " << result << endl;
+    	cout << "Your original string: " << input << endl;
+    
+    	return 0;
+    }
+    
+    string version1(const string& s1, const string& s2) {
+    	string temp;
+    
+    	temp = s2 + s1 + s2;
+    	return temp;
+    }
+    
+    const string& version2(string& s1, const string& s2) {
+    	s1 = s2 + s1 + s2;
+    	return s1;
+    }
+    
+    const string& version3(string& s1, const string& s2) {
+    	string temp;
+    	temp = s2 + s1 + s2;
+    	return temp;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter a string: It's not my fault.
+    Your string as entered: It's not my fault.
+    Your string enhanced: ***It's not my fault.***
+    Your original string: It's not my fault.
+    Your string enhanced: ###It's not my fault.###
+    Your original string: ###It's not my fault.###
+    Resetting original string.
+    Your string enhanced:
+    Your original string: It's not my fault.
+    ```
+
+  * 最后一个函数出现问题，无法正常显示：
+
+    * version1：
+
+      * 它接受两个 string 参数，并使用 string 类的加能来创建一个满足要求的新字符串。这两个函数参数都是 const 引用。如果使用 string 对象作为参数，最终结果将不变；
+      * temp 是一个新的 string 对象，只在函数 version1() 中有效，该函数执行完毕后，它将不再存在。**因此,返回指向 temp 的引用不可行**（version3的错误），因此该函数的返回类型为 string，这意味着 temp 的内容将被复制到一个临时存储单元中，然后在 main() 中，该存储单元的内容被复制到一个名为 result 的 string 中。
+
+    * version2：
+
+      * 不创建临时 string 对象，而是直接修改原来的 string 对象。
+      * 如果要保留原来的字符串不变，这将是一种错误设计。
+
+    * version3：
+
+      * 它存在一个致命的缺陷:返回一个指向 version3()中声明的变量的引用。这个函数能够通过编译(但编译器会发出警告)，但当程序试图执行该函数时将崩溃。具体地说，问题是由下面的赋值语句引发的：
+
+        * ```c++
+          result = version3(input, "@@@");
+          ```
+
+        * 程序试图引用已经释放的内存。
+
+
+
+#### 8.2.6 对象、继承和引用
