--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -541,3 +541,140 @@
 
 
 #### 8.2.6 对象、继承和引用
+
+* 继承：
+
+  * 这使得文件输入/输出的格式与控制台输入/输出相同。使得能够将特性从一个类传递给另一个类的语言特性被称为继承；
+  * 例如：ofstream 对象可以使用 ostream 类的方法。
+    * ostream 基类；
+    * ofstream 派生类。
+    * 派生类继承了基类的的方法吗，因此 ofstream 对象可以使用基类的特性。
+
+* 示例：
+
+  * ```c++
+    // ch08_08_filefunc -- function with ostream & parameter
+    #include <iostream>
+    #include <fstream>
+    #include <cstdlib>
+    
+    using namespace std;
+    
+    void file_it(ostream& os, double pf, const double fe[], int n);
+    const int LIMIT = 5;
+    
+    int main(){
+    	ofstream fout;
+    	const char* fn = "ep-data.txt";
+    	fout.open(fn);
+    	if (!fout.is_open()) {
+    		cout << "Can't open " << fn << ". Bye.\n";
+    		exit(EXIT_FAILURE);
+    	}
+    	double objective;
+    	cout << "Enter the focal length of your "
+    			"telescope objective in mm:";
+    	cin >> objective;
+    	double eps[LIMIT];
+    	cout << "Enter the focal lengths, in mm of " << LIMIT
+    		 << " eyepieces:\n";
+    	for (int i = 0; i < LIMIT; i++) {
+    		cout << "Eyepiece #" << i + 1 << ": ";
+    		cin >> eps[i];
+    	}
+    	file_it(fout, objective, eps, LIMIT);
+    	file_it(cout, objective, eps, LIMIT);
+    	cout << "Done\n";
+    
+    	return 0;
+    }
+    
+    void file_it(ostream& os, double fo, const double fe[], int n) {
+    	ios_base::fmtflags initial;
+    	initial = os.setf(ios_base::fixed);//将对象置于使用定点表示法的模式
+    	os.precision(0);
+    	os << "Focal length of objective: " << fo << " mm\n";
+    	os.setf(ios::showpoint);//将对象置于显示小数点的模式，即使小数部分为零
+    	os.precision(1);//指定显示多少位小数(假定对象处于定点模式下)。
+    	os.width(12);//设置下一次输出操作使用的字段宽度,这种设置只在显示下一个值时有效，然后将恢复到默认设置。默认的字段宽度为零，这意味着刚好能容纳下要显示的内容。
+    	os << "f.1. eyepiece";
+    	os.width(15);
+    	os << "magnification" << endl;
+    	for (int i = 0; i < n; i++) {
+    		os.width(12);
+    		os << fe[i];
+    		os.width(15);
+    		os << int(fo / fe[i] + 0.5) << endl;
+    	}
+    	os.setf(initial);
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter the focal length of your telescope objective in mm:1800
+    Enter the focal lengths, in mm of 5 eyepieces:
+    Eyepiece #1: 30
+    Eyepiece #2: 19
+    Eyepiece #3: 14
+    Eyepiece #4: 8.8
+    Eyepiece #5: 7.5
+    Focal length of objective: 1800 mm
+    f.1. eyepiece  magnification
+            30.0             60
+            19.0             95
+            14.0            129
+             8.8            205
+             7.5            240
+    Done
+    ```
+
+  * 下述代码行将目镜数据写入到文件ep-datatxt中:
+
+    * ```c++
+      file_it(fout, objective, eps, LIMIT);
+      ```
+
+  * 而下述代码行将同样的信息以同样的格式显示到屏幕上:
+
+    * ```c++
+      file_it(cout, objective, eps, LIMIT);
+      ```
+
+  * 函数fleit()使用了两个有趣的方法调用：
+
+    * ```c++
+      ios_base::fmtflags initial;
+      initial = os.setf(ios_base::fixed);
+      ...
+      os.setf(initial);
+      ```
+
+      * 方法setf()返回调用它之前有效的所有格式化设置；
+      * ios_base::fmtflags是存储这种信息所需的数据类型名称；
+      * 因此，将返回值赋给 initial 将存储调用 fle it( )之前的格式化设置，然后便可以使用变量 initial 作为参数来调用 setf( )，将所有的格式化设置恢复到原来的值。因此，该函数将对象回到传递给 fle it()之前的状态
+
+
+
+#### 8.2.7 何时使用引用参数
+
+* 使用引用参数的主要原因：
+  * 程序员能够修改调用函数中的数据对象；
+  * 通过传递引用而不是整个数据对象，可以提高程序的运行速度。（当数据对象较大时(如结构和类对象)，第二个原因最重要。）
+* 对于使用传递的值而不作修改的函数：
+  * 如果数据对象很小，如内置数据类型或小型结构，则按值传递。
+  * 如果数据对象是数组，则使用指针，因为这是唯一的选择，并将指针声明为指向 const 的指针。
+  * 如果数据对象是较大的结构，则使用 const 指针或const 引用，以提高程序的效率。这样可以节省复制结构所需的时间和空间。
+  * 如果数据对象是类对象，则使用 const 引用。类设计的语义常常要求使用引用，这是 C++ 新增这项特性的主要原因。因此，传递类对象参数的标准方式是按引用传递。
+* 对于修改调用函数中数据的函数：
+  * 如果数据对象是内置数据类型，则使用指针。如果看到诸如 fixit(&x)这样的代码(其中 x 是 int)则很明显，该函数将修改 x。
+  * 如果数据对象是数组，则只能使用指针。
+  * 如果数据对象是结构，则使用引用或指针。
+  * 如果数据对象是类对象，则使用引用。
+
+
+
+### 8.3 默认参数
+
+
