--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -677,4 +677,90 @@
 
 ### 8.3 默认参数
 
+* 默认参数：默认参数指的是当函数调用中省略了实参时自动使用的一个值。例如如果将void wow (int n) 设置成n有默认值为1，则函数调用 wow( )相当于 wow(1)
 
+* 设置默认参数：
+
+  * 必须设置函数原型，将赋值给原型中的参数：
+
+    * ```c++
+      char * left(const char * str, int n = 1);
+      ```
+
+    * 如果省略参数n，则它的值将为 1;否则，传递的值将覆盖 1。
+
+  * 对于带参数列表的函数，必须从右向左添加默认值。也就是说，要为某个参数设置默认值，则必须为它右边的所有参数提供默认值：
+
+    * ```c++
+      int harpo(int n, int m = 4; int j = 5); //VALID
+      int chico(int n, int m = 6; int j); //INVALID
+      int grocho(int k = 1; int m = 2; int n = 3); //VALID
+      ```
+
+  * 例如，harpo()原型允许调用该函数时提供1个、2个或3 个参数：
+
+    * ```C++
+      beeps = harpo(2);       //same as harpo(2,4,5)
+      beeps = harpo(1, 8);    //same as harpo(1,8,5)
+      beeps = harpo(8, 7, 6); //same as harpo(8,7,6)
+      ```
+
+  * 实参按从左到右的顺序依次被赋给相应的形参，而不能跳过任何参数。因此，下面（P275）的调用是不允许的。
+
+* 示例：
+
+  * ```c++
+    // ch08_09_left.cpp -- string function with a default argument
+    #include <iostream>
+    const int ArSize = 80;
+    char* left(const char* str, int n = 1);
+    
+    int main() {
+    	using namespace std;
+    	char sample[ArSize];
+    	cout << "Enter a string:\n";
+    	cin.get(sample, ArSize);
+    	char* ps = left(sample, 4);
+    	cout << ps << endl;
+    	delete[] ps;
+    	ps = left(sample);
+    	cout << ps << endl;
+    	delete[] ps;
+    
+    	return 0;
+    }
+    
+    char* left(const char * str, int n) {
+    	if (n < 0)
+    		n = 0;
+    	char* p = new char[n + 1];
+    	int i;
+    	for (i = 0; i < n && str[i]; i++)
+    		p[i] = str[i];
+    	while (i <= n)
+    		p[i++] = '\0';
+    	return p;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter a string:
+    forthcoming
+    fort
+    f
+    ```
+
+  * 这里在编译的时候报错，是因为默认值在定义中出现：
+
+    * ```c++
+      char* left(const char * str, int n = 1) {
+      	...
+      }
+      ```
+
+    * 参数的默认值**只可以出现**在**函数声明**中，不可以出现在函数的定义中，否则会出现参数重复定义默认参数的错误
+
+      * 1定义和声明分开：默认值只可以出现在声明中
+      * 2定义和声明不分开，默认值只能出现在定义中
