--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -764,3 +764,59 @@
 
       * 1定义和声明分开：默认值只可以出现在声明中
       * 2定义和声明不分开，默认值只能出现在定义中
+
+
+
+### 8.4 函数重载
+
+* 默认参数让你能够使用不同数目的参数调用同一个函数，而函数多态（函数重载）让你能够使用多个同名的函数。
+
+  * “多态”指的是有多种形式，因此函数多态允许函数可以有多种形式；
+  * “函数重载”指的是可以有多个同名的函数，因此对名称进行了重载。
+
+* 函数重载的关键是函数的参数列表——也称为函数特征标。
+
+  * 如果两个函数的参数数目和类型相同，同时参数的排列顺序也相同，则它们的特征标相同，而变量名是无关紧要的。
+
+  * C++允许定义名称相同的函数，条件是它们的特征标不同。
+
+  * 如果参数数目和/或参数类型不同，则特征标也不同。例如，可以定义一组原型如下的print()函数:
+
+    * ```c++
+      void print (const char * str, int width); //#1
+      void print (double d, int width);         //#2
+      void print (long l, int width);           //#3
+      void print (int i, int width);            //#4
+      void print (const char *str);             //#5
+      ```
+
+    * 使用print( )函数时，编译器将根据所采取的用法使用有相应特征标的原型。
+
+  * 使用被重载的函数时，需要在函数调用中使用正确的参数类型。
+
+  * 一些看起来彼此不同的特征标是不能共存的：
+
+    * ```c++
+      double cube(double x);
+      double cube(double & x);
+      ```
+
+    * 参数x与double x原型和 double &x 原型都匹配，因此编译器无法确定究竟应使用哪个原型。为避免这种混乱，编译器在检查函数特征标时，将把**类型引用**和类型本身视为同一个特征标。
+
+    * 匹配函数时，并不区分const和非const变量。（将非const值赋给const变量是合法的，但反之是非法的）
+
+  * 是特征标，而不是函数类型使得可以对函数进行重载。因此要对函数进行重载必须：返回类型可以不同，但特征标也必须不同。看P278
+
+
+
+* 重载引用参数，能够根据参数是左值、const值还是右值来指定函数的行为P278。
+
+
+
+#### 8.4.1 重载示例
+
+
+
+
+
+
