--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -898,12 +898,29 @@
 
 
 
+
+
 #### 8.4.2 何时使用函数重载
 
+* 不要滥用，仅当函数基本上执行相同的任务，但使用不同形式的数据时才应采用函数重载。
+
+* 使用默认参数来实现同样的目的：
+
+  * 使用一个带默认参数的函数要简单些。只需编写一个函数(而不是两个函数)，程序也只需为一个函数(而不是两个)请求内存;需要修改函数时，只需修改一个。然而，如果需要使用不同类型的参数，则默认参数便不管用了，在这种情况下，应该使用函数重载。P280;
+
+* 名称修饰（矫正）：
+
+  * 它根据函数原型中指定的形参类型对每个函数名进行加密：
+
+    * ```C++
+      long MyFunctionFoo (int, float);
+      ```
+
+    * 对原始名称进行的表面看来无意义的修饰(或矫正，因人而异) 将对参数数目和类型进行编码。添加的一组符号随函数特征标而异，而修饰时使用的约定随编译器而异。P281
 
 
 
-
+### 8.5 函数模板
 
 
 
