--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -301,7 +301,7 @@ void showmenu(void) {
 
 
 
-### 4．加入 Benevolent  Order of Programmer 后，在 BOP 大会上，人们便可以通过加入者的真实姓名、头衔或秘密 BOP 姓名来了解他（她）。请编写一个程序，可以使用真实姓名、头衔、秘密姓名或成员偏好来列出成员。编写该程序时，请使用下面的结构:
+### 4．加入 Benevolent  Order of  Programmer 后，在 BOP 大会上，人们便可以通过加入者的真实姓名、头衔或秘密 BOP 姓名来了解他（她）。请编写一个程序，可以使用真实姓名、头衔、秘密姓名或成员偏好来列出成员。编写该程序时，请使用下面的结构:
 
 ```c++
 // Benevolent Order of Programmers name structure
@@ -342,6 +342,69 @@ struct bop{
   Analyst TraineeLOOPY
   Next choice: q
   Bye!
+  ```
+
+* ```c++
+  // demo.cpp -- book practice demo
+  #include <iostream>
+  using namespace std;
+  void showmenu(void);
+  const int strsize = 20;
+  struct bop {
+      char fullname[strsize]; //real name
+      char title[strsize];    //job title
+      char bopname[strsize];  //secret BOP name
+      int perference;         // 0 = fullname, 1 = title, 2 = bopname
+  };
+  
+  int main() {
+      char choice;
+      bop guests[5] = {
+          {"Wimp Macho", "Junior Programmer", "WM",0},
+          {"Raki Rhodes", "Junior Programmer", "RR", 1},
+          {"Celia Laiter", "Junior Programmer", "MIPS", 2},
+          {"Hoppy Hipman", "Analyst Trainee", "HH", 1},
+          {"Pat Hand", "Junior Programmer", "LOOPY", 2}
+      };
+          
+      showmenu();
+      cout << "Enter your choice: ";
+      while (cin >> choice && choice != 'q') {
+          switch (choice) {
+              case 'a':   for (int i = 0; i < 5; ++i)
+                              cout << guests[i].fullname << endl;
+                  break;
+              case 'b':   for (int i = 0; i < 5; ++i)
+                              cout << guests[i].title << endl;
+                  break;
+              case 'c':   for (int i = 0; i < 5; ++i)
+                              cout << guests[i].bopname << endl;
+                  break;
+              case 'd':   for (int i = 0; i < 5; ++i) {
+                  if (guests[i].perference == 0)
+                      cout << guests[i].fullname << endl;
+                  else if (guests[i].perference == 1)
+                      cout << guests[i].title << endl;
+                  else if (guests[i].perference == 2)
+                      cout << guests[i].bopname << endl;
+                  else
+                      ;
+                          }
+                  break;
+              default :   cout << "Please enter a a, b, c, d, or <q is quit>! ";
+          }
+          cout << "Enter your choice: ";
+      }
+      cout << "Bye!\n";
+      return 0;
+   }
+  
+  void showmenu(void) {
+      cout << "Benevolent Order of Programmers Report\n"
+              "a.display by name		b.display by title\n"
+              "c.display by bopname		d.display by preference\n"
+              "q.quit\n";
+  }
   ```
 
 
