--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -284,7 +284,7 @@ int main() {
                 break;
             case 'g':   cout << "A maple is a game.\n";
                 break;
-            default :   cout << "Please enter a c, p, t, or g: ";
+            default :   cout << "Please enter a: c, p, t, or g: ";
         }
     }
 
