--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -918,9 +918,85 @@
 
     * 对原始名称进行的表面看来无意义的修饰(或矫正，因人而异) 将对参数数目和类型进行编码。添加的一组符号随函数特征标而异，而修饰时使用的约定随编译器而异。P281
 
-20231024
-
 ### 8.5 函数模板
+
+* 函数模板是通用的函数描述，它们使用泛型来定义函数，其中的泛型可用具体具体的类型（如 int 或 double）替换。
+
+* 函数模板允许以任意类型的方式来定义函数。例如，可以这样建立一个交换模板：
+
+  * ```c++
+    temple <typename AnyType>			//要建立一个模板，并将类型命名为AnyType
+    void Swap(AnyType &a, AnyType &b){
+        AnyType temp;
+        temp = a;
+        a = b;
+        b = temp;
+    }
+    ```
+
+  * 关键字 template 和 typename 是必需的，除非可以使用关键字 class 代替 typename
+
+  * 另外，必须使用尖括号。类型名可以任意选择(这里为AnyType)
+
+  * 在标准C++98添加关键字 typename 之前，C++使用关键字class 来创建模板，也就是说有class 可以代替 typename ；大量代码库是使用关键字class。因此两者等价。
+
+  * 如果需要多个将同一种算法用于不同类型的函数，请使用模板。如果不考虑向后兼容的问题并愿意键入较长的单词，则声明类型参数时，应使用关键字 typename 而不使用 class。
+
+* 示例：
+
+  * ```c++
+    //  ch08_11_funtemp.cpp -- using a function template
+    #include <iostream>
+    
+    template <typename T>
+    void Swap(T& a, T& b);
+    
+    int main() {
+    	using namespace std;
+    	int i = 10;
+    	int j = 20;
+    	cout << "i, j = " << i << ", " << j << ".\n";
+    	cout << "Using compiler-generated int swapper:\n";
+    	Swap(i, j);
+    	cout << "Now i, j = " << i << ", " << j << ".\n";
+    
+    	double x = 24.5;
+    	double y = 81.7;
+    	cout << "x, y = " << x << ", " << y << ".\n";
+    	cout << "Using compiler-generated double swapper:\n";
+    	Swap(x, y);
+    	cout << "Now x, y = " << x << ", " << y << ".\n";
+    
+    	return 0;
+    }
+    
+    template <typename T>
+    void Swap(T &a, T &b){
+    	T temp;
+    	temp = a;
+    	a = b;
+    	b = temp;
+    }
+    ```
+
+* 结果：
+
+  * ```C++
+    i, j = 10, 20.
+    Using compiler-generated int swapper:
+    Now i, j = 20, 10.
+    x, y = 24.5, 81.7.
+    Using compiler-generated double swapper:
+    Now x, y = 81.7, 24.5.
+    ```
+
+  * 第一个 Swap()函数接受两个 int 参数，因此编译器生成该函数的  int 版本。也就是说，用 int 替换所有的T
+
+* 更常见的情形是，将模板放在头文件中，并在需要使用模板的文件中包含头文件。
+
+
+
+#### 8.5.1 重载的模板
 
 
 
