--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -998,5 +998,90 @@
 
 #### 8.5.1 重载的模板
 
+* 可以像重载常规函数定义那样重载模板定义。
+
+* 被重载的模板的函数特征标必须不同。
+
+* 示例：（原来的模板特征标为（T &, T&），而新模板的特征标为（T [ ], T ( ), int）。注意，在后一个模板中，最后一个参数的类型为具体类型 （int），而不是泛型。并非所有的模板参数都必须是模板参数类型。）
+
+  * ```c++
+    // ch08_12_twotemps.cpp -- using overloaded template functions
+    #include <iostream>
+    template <typename T>
+    void Swap(T& a, T& b);
+    
+    template <typename T>
+    void Swap(T* a, T* b, int n);
+    
+    void Show(int a[]);
+    const int Lim = 8;
+    
+    int main() {
+    	using namespace std;
+    	int i = 10, j = 20;
+    	cout << "i, j = " << i << ", " << j << ".\n";
+    	cout << "Using compiler-generated int swapper:\n";
+    	Swap(i, j);
+    	cout << "Now i, j = " << i << ", " << j << ".\n";
+    
+    	int d1[Lim] = { 0,7,0,4,1,7,7,6 };
+    	int d2[Lim] = { 0,7,2,0,1,9,6,9 };
+    	cout << "Original arrays:\n";
+    	Show(d1);
+    	Show(d2);
+    	Swap(d1, d2, Lim);
+    	cout << "Swapped arrays:\n";
+    	Show(d1);
+    	Show(d2);
+    
+    	return 0;
+    }
+    
+    template <typename T>
+    void Swap(T& a, T& b) {
+    	T temp;
+    	temp = a;
+    	a = b;
+    	b = temp;
+    }
+    
+    template <typename T>
+    void Swap(T* a, T* b, int n) {
+    	T temp;
+    	for (int i = 0; i < n; i++) {
+    		temp = a[i];
+    		a[i] = b[i];
+    		b[i] = temp;
+    	}
+    }
+    
+    void Show(int a[]) {
+    	using namespace std;
+    	cout << a[0] << a[1] << "/";
+    	cout << a[2] << a[3] << "/";
+    	for (int i = 4; i < Lim; i++)
+    		cout << a[i];
+    	cout << endl;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    i, j = 10, 20.
+    Using compiler-generated int swapper:
+    Now i, j = 20, 10.
+    Original arrays:
+    07/04/1776
+    07/20/1969
+    Swapped arrays:
+    07/20/1969
+    07/04/1776
+    ```
+
+
+
+#### 8.5.2 模板的局限性
+
 
 
