--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -1083,5 +1083,174 @@
 
 #### 8.5.2 模板的局限性
 
+* 无法处理某些特殊类型：
+
+  * 假设如下模板类型：
+
+    * ```c++
+      template <class Y>
+      void f(T a, T B){
+          ...
+      }
+      ```
+
+    * 如果T为数组，以下假设操作不成立：
+
+      * ```c++
+        a = b;
+        ```
+
+    * 如果语句设定了“<”，如过T为结构，以下假设操作不成立：
+
+      * ```c++
+        if (a > b)
+        ```
+
+    * 但如果T为数组、指针或结构，这种假设便不成立：
+
+      * ```c++
+        T c = a*b;
+        ```
+
+* 因此有时候通用化是有意义的，但 C++语法不允许这样做。
+
+  * 解决方法一：C++允许您重载运算符+，以便能够将其用于特定的结构或类。这样使用运算符+的模板便可处理重载了运算符+的结构
+  * 结局方法二：为特定类型提供具体化的模板定义，下面就来介绍这种解决方案。
 
 
+
+#### 8.5.3 显式具体化
+
+* 假设如下模板类型：
+
+  * ```c++
+    struct job{
+        char name[40];
+        double salary;
+        int floor;
+    };
+    ```
+
+* 另外，假设希望能够交换两个这种结构的内容。原来的模板使用下面的代码来完成交换：
+
+  * ```c++
+    temp = a;
+    a = b;
+    b = temp;
+    ```
+
+* 如果交换 salary 和 floor 结构成员，其余不变，则需要使用不同的代码。但Swap( )的参数将保持不变，因此无法使用模板重载来提供替他的代码。
+
+* 解决办法（显式具体化——当编译器找到与函数调用匹配的具体化定义时，将使用该定义，而不再寻找模板）：
+
+  * 1、第三代具体化
+
+    * (1) 对于给定的函数名，可以有非模板函数、模板函数和显式具体化模板函数以及它们的重载版本。
+
+    * (2) 显式具体化的原型和定义应以 template<> 打头，并通过名称来指出类型。
+
+    * (3) 具体化优先于常规模板，而非模板函数优先于具体化和常规模板。
+
+    * 下面是用于交换job 结构的非模板函数、模板函数和具体化的原型：
+
+      * ```c++
+        // non template function prototype
+        void Swap(job &, job &);
+        
+        //template prototype
+        template <typename T>
+        void Swap(T &, T &);
+        
+        //explict specialization for the job type
+        template <> void Swap<job>(job &, job &);
+        //<job>是可选的，因为函数的参数类型表明，这是 job 的一个具体化，因此等价于下面的代码：
+        template <> void Swap(job &, job &);
+        ```
+
+      * 正如前面指出的，如果有多个原型，则编译器在选择原型时:
+
+        * 非模板版本优先于显式具体化和模板版本;
+        * 而显式具体化优先于使用模板生成的版本。
+
+  * 2、显式具体化示例：
+
+    * ```c++
+      // ch08_13_twoswap.cpp -- specialization overrides a template
+      #include <iostream>
+      template <typename T>
+      void Swap(T& a, T& b);
+      
+      struct job {
+      	char name[40];
+      	double salary;
+      	int floor;
+      };
+      
+      //explicit specialization
+      template <> void Swap<job>(job& j1, job& j2);
+      void Show(job& j);
+      
+      int main() {
+      	using namespace std;
+      	cout.precision(2);
+      	cout.setf(ios::fixed, ios::floatfield);
+      	int i = 10, j = 20;
+      	cout << "i, j = " << i << ", " << j << ".\n";
+      	cout << "Using compiler-generated int swapper:\n";
+      	Swap(i, j);
+      	cout << "Now i, j = " << i << ", " << j << ".\n";
+      
+      	job sue = { "Susan Yaffee", 73000.60, 7 };
+      	job sidney = { "Sidney Taffee", 78060.72, 9 };
+      	cout << "Before job swapping:\n";
+      	Show(sue);
+      	Show(sidney);
+      	Swap(sue, sidney);
+      	cout << "After job swapping:\n";
+      	Show(sue);
+      	Show(sidney);
+      
+      	return 0;
+      }
+      
+      template <typename T>
+      void Swap(T& a, T& b) {
+      	T temp;
+      	temp = a;
+      	a = b;
+      	b = temp;
+      }
+      
+      template <> void Swap<job>(job& j1, job& j2) {
+      	double t1;
+      	int t2;
+      	t1 = j1.salary;
+      	j1.salary = j2.salary;
+      	j2.salary = t1;
+      	t2 = j1.floor;
+      	j1.floor = j2.floor;
+      	j2.floor = t2;
+      }
+      
+      void Show(job& j) {
+      	using namespace std;
+      	cout << j.name << ": $" << j.salary
+      		 << " on floor " << j.floor << endl;
+      }
+      ```
+
+    * ```c++
+      i, j = 10, 20.
+      Using compiler-generated int swapper:
+      Now i, j = 20, 10.
+      Before job swapping:
+      Susan Yaffee: $73000.60 on floor 7
+      Sidney Taffee: $78060.72 on floor 9
+      After job swapping:
+      Susan Yaffee: $78060.72 on floor 9
+      Sidney Taffee: $73000.60 on floor 7
+      ```
+
+
+
+#### 8.5.4 实例化和具体化
