--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -412,12 +412,51 @@ struct bop{
 
 ```c++
 5000 tvarps:不收税
-5001~15000tvarps: 10%
-15001~35000tvarps: 15%
-35000tvarps以上: 20%
+5001~15000 tvarps: 10%
+15001~35000 tvarps: 15%
+35000 tvarps以上: 20%
 ```
 
-* 例如，收入为38000 tvarps 时，所得税为 5000 x 0.00 + 10000  0.10 + 20000 x 0.15 + 3000 x 0.20，即4600 tvarps。请编写一个程序，使用循环来要求用户输入收入，并报告所得税。当用户输入负数或非数字时，循环将结束。
+* 例如，收入为38000 tvarps 时，所得税为 5000 x 0.00 + 10000 x 0.10 + 20000 x 0.15 + 3000 x 0.20，即4600 tvarps。请编写一个程序，使用循环来要求用户输入收入，并报告所得税。当用户输入负数或非数字时，循环将结束。
+
+```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+using namespace std;
+
+int main() {
+    int tcarps;
+    int revenue;
+    cout << "Enter your tcarps: ";
+    while (cin >> tcarps && tcarps >= 0) {
+        if (tcarps <= 5000)
+            cout << "The revenue of " << tcarps
+            << " tvarps is: 0 tvarps.\n";
+        else if (tcarps > 5000 && tcarps <= 15000) {
+            revenue = 5000 * 0.00 + (tcarps - 5000) * 0.10;
+            cout << "The revenue of " << tcarps
+                << " tvarps is: " << revenue << " tvarps.\n";
+        }
+        else if (tcarps > 15000 && tcarps <= 35000) {
+            revenue = 5000 * 0.00 + 10000 * 0.10 + (tcarps - 15000) * 0.15;
+            cout << "The revenue of " << tcarps
+                << " tvarps is: " << revenue << " tvarps.\n";
+        }
+        else if (tcarps > 35000) {
+            revenue = 5000 * 0.00 + 10000 * 0.10 + 20000 * 0.15 + (tcarps - 35000) * 0.20;
+            cout << "The revenue of " << tcarps
+                << " tvarps is: " << revenue << " tvarps.\n";
+        }
+        else
+            cout << "error!" << endl;
+        cout << "Enter your tcarps: ";
+    }
+    cout << "Bye!\n";
+    return 0;
+ }
+```
+
+
 
 ### 6．编写一个程序，记录捐助给“维护合法权利团体”的资金。该程序要求用户输入捐献者数目，然后要求用户输入每一个捐献者的姓名和款项。这些信息被储存在一个动态分配的结构数组中。每个结构有两个成员:用来储存姓名的字符数组(或 string 对象)和用来存储款项的 double 成员。读取所有的数据后,程序将显示所有捐款超过 10000 的捐款者的姓名及其捐款数额。该列表前应包含一个标题，指出下面的捐款者是重要捐款人(Grand Patrons)。然后，程序将列出其他的捐款者，该列表要以 Patrons 开头。如果某种类别没有捐款者，则程序将打印单词“none”。该程序只显示这两种类别，而不进行排序。
 
