--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -458,10 +458,71 @@ int main() {
 
 
 
-### 6．编写一个程序，记录捐助给“维护合法权利团体”的资金。该程序要求用户输入捐献者数目，然后要求用户输入每一个捐献者的姓名和款项。这些信息被储存在一个动态分配的结构数组中。每个结构有两个成员:用来储存姓名的字符数组(或 string 对象)和用来存储款项的 double 成员。读取所有的数据后,程序将显示所有捐款超过 10000 的捐款者的姓名及其捐款数额。该列表前应包含一个标题，指出下面的捐款者是重要捐款人(Grand Patrons)。然后，程序将列出其他的捐款者，该列表要以 Patrons 开头。如果某种类别没有捐款者，则程序将打印单词“none”。该程序只显示这两种类别，而不进行排序。
+### 6．📌（动态结构数组）编写一个程序，记录捐助给“维护合法权利团体”的资金。该程序要求用户输入捐献者数目，然后要求用户输入每一个捐献者的姓名和款项。这些信息被储存在一个动态分配的结构数组中。每个结构有两个成员:用来储存姓名的字符数组(或 string 对象)和用来存储款项的 double 成员。读取所有的数据后,程序将显示所有捐款超过 10000 的捐款者的姓名及其捐款数额。该列表前应包含一个标题，指出下面的捐款者是重要捐款人(Grand Patrons)。然后，程序将列出其他的捐款者，该列表要以 Patrons 开头。如果某种类别没有捐款者，则程序将打印单词“none”。该程序只显示这两种类别，而不进行排序。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <string>
 
+struct Donation {
+    std::string name;
+    double price;
+};
+
+void display(Donation donation[], int num, bool isGrandPatrons);
+
+int main() {
+    using namespace std;
+
+    cout << "Please enter the number of patrons: \n";
+    int num;
+    while (!(cin >> num)) {
+        cin.clear();
+        cin.sync();
+        cin.ignore();
+        cout << "***[WARNING]:Please enter positive integer.***" << endl;
+        cout << "Please enter the number of patrons: \n";
+    }
+    cin.get();
+
+    Donation* ps = new Donation[num];
+    for (int i = 0; i < num; ++i) {
+        cout << "Enter name of patrons: ";
+        getline(cin, ps[i].name);
+        cout << "Enter price: $";
+        cin >> ps[i].price;
+        cin.get();
+    }
+    cout << "******Grand Partons******" << endl;
+    display(ps, num, true);
+    cout << "******Partons******" << endl;
+    display(ps, num, false);
+
+    delete[] ps;
+    return 0;
+ }
+
+void display(Donation donation[], int num, bool isGrandPatrons) {
+    using namespace std;
+    int countNum = 0;
+    for (int i = 0; i < num; ++i) {
+        if (isGrandPatrons) {
+            if (donation[i].price > 1000) {
+                cout << donation[i].name << endl;
+                countNum++;
+            }
+        }
+        else {
+            if (donation[i].price <= 1000) {
+                cout << donation[i].name << endl;
+                countNum++;
+            }
+        }
+    }
+    if (countNum == 0)
+        cout << "None" << endl;
+}
 ```
 
 
