--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -689,7 +689,7 @@ char fourth_data {"Le Chapon Dodu"};
 
   * 使用字符数组时，总是存在目标数目过小，无法储存指定信息的危险：
 
-    * strcat()视图将全部字符复制到目标数组中，浙江覆盖相邻的内存，可能导致程序终止。
+    * strcat()视图将全部字符复制到目标数组中，这将覆盖相邻的内存，可能导致程序终止。
     * 而string类具有自动调整大小的功能。
 
   * 确定字符串中字符数的方法：
