--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -1254,4 +1254,209 @@
 
 
 #### 8.5.4 实例化和具体化
-20231025
+
+* 在代码中包含函数模板本身并不会生成函数定义，它只是一个用于生成函数定义的方案。编译器使用模板为特定类型生成函数定义时，得到的是模板实例（instantiation）。
+
+  * 实例化分为显式和隐式，之前的例子中用的便是隐式实例化，详情见P288。
+
+    * 显式实例化：
+
+      * 可以直接命令编译器创建特定的实例，如Swap<int>()。其语法是，声明所需的种类——用<>符号指示类型，并在声明前加上关键字template：
+
+        * ```c++
+          template void Swap<int>(int, int);
+          ```
+
+        * 实现了这种特性的编译器看到上述声明后，将使用 Swap()模板生成一个使用 int 类型的实例。也就是说，该声明的意思是“使用Swap()模板生成int类型的函数定义。”
+
+    * 还可通过在程序中使用函数来创建显式实例化：
+
+      * ```c++
+        template <class T>
+        T Add(T a, T b){
+            return a + b;
+        }
+        ...
+        int m = 6;
+        double x = 10.2;
+        cout << Add<double>x(x,m) << endl;
+        ```
+
+      * m 和 x 两个参数类型不同，通过Add<double>(x, m)，可强制为 double 类型实例化，以便于模板相匹配。但是这种方法不能应用于形参为 &的函数中。P289。
+
+* 显式具体化：
+
+  * 与显式实例化不同的的是，显式具体化使用下面两个等价的声明之一：
+
+    * ```c++
+      template <> void Swap<int>(int &, int &);
+      template <> void Swap(int &, int &);
+      ```
+
+    * 区别在于，这些声明的意思是 “不要使用 Swap()模板来生成函数定义，而应使用专门为 int 类型显式地定义的函数定义” 。这些原型必须有自己的函数定义。
+
+    * 显式具体化声明在关键字template 后包含 <> ；而显式实例化没有。
+
+    * 试图在同一个文件(或转换单元) 中使用同一种类型的显式实例和显式具体化将出错。
+
+* 隐式实例化、显式实例化和显式具体化统称为具体化：
+
+  * 相同点：
+    * 表示的都是使用具体类型的函数定义，而不是通用描述。
+
+* 引入显式实例化后，必须使用新的语法：
+
+  * 在声明中使用前缀 template 和 template<> ，以区分显式实例化和显式具体化。通常，功能越多，语法规则也越多。下面的代码片段总结了这些概念：P289。
+
+
+
+#### 8.5.5 编译器选择使用哪个函数版本
+
+* 重载解析：
+  * 对于**函数重载**、**函数模板**和**函数模板重载**，C++需要决定为函数调用使用哪一个函数定义。
+  * 步骤：
+    * 第1步：创建候选函数列表。其中包含与被调用函数的名称相同的函数和模板函数。
+    * 第2步：使用候选函数列表创建可行函数列表。这些都是参数数目正确的函数，为此有一个隐式转换序列，其中包括实参类型与相应的形参类型完全匹配的情况。例如，使用 float 参数的函数调用可以将该参数转换为 double，从而与 double 形参匹配，而模板可以为 float 生成一个实例。
+    * 第3步：确定是否有最佳的可行函数。如果有，则使用它，否则该函数调用出错。
+  * 编译器查看为使函数调用参数与可行的候选函数的参数匹配所需要经行的转换。通常，从最佳到最差的顺序如下：
+    * 1、完全匹配，但常规函数优先于模板。
+    * 2、提升转换（例如，char 和 shorts 自动转换为 int ，float 自动转换为 double ）。
+    * 3、标准转换（例如，int 转换为 char，long 转换为 double）。
+    * 4、用户定义的转换，如类声明中定义的转换。
+  * 案例见P290。
+
+1. 完全匹配和最佳匹配
+
+   Type 意味着用作实参的函数名与用作形参的函数指针只要返回类型和参数列表相同，就是匹配的。
+
+   ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/2eaaa687-141f-4aa3-93b6-1d04a916dde5)
+
+
+2. 部分排序规则示例
+
+   ​	例程：
+
+   * ```c++
+     // ch08_14_temptempover.cpp -- template overloading
+     #include <iostream>
+     
+     template <typename T>
+     void ShowArray(T arr[], int n);
+     
+     template <typename T>
+     void ShowArray(T* arr[], int n);
+     
+     struct debts {
+     	char name[50];
+     	double amount;
+     };
+     
+     int main() {
+     	using namespace std;
+     	int things[6] = { 13, 31, 103, 301, 310, 130 };
+     	struct debts mr_E[3] = {
+     		{"Ima Wolfe", 2400.0},
+     		{"Ura Foxe", 1300.0},
+     		{"Iby Stout", 1800.0}
+     	};
+     	double* pd[3];
+     
+     	for (int i = 0; i < 3; i++)
+     		pd[i] = &mr_E[i].amount;
+     
+     	cout << "Listing Mr. E's counts of things:\n";
+     	ShowArray(things, 6);
+     
+     	cout << "Listing Mr. E's debts:\n";
+     	ShowArray(pd, 3);
+     
+     	return 0;
+     }
+     
+     template <typename T>
+     void ShowArray(T arr[], int n) {
+     	using namespace std;
+     	cout << "template A\n";
+     	for (int i = 0; i < n; i++)
+     		cout << arr[i] << ' ';
+     	cout << endl;
+     }
+     
+     template <typename T>
+     void ShowArray(T* arr[], int n) {
+     	using namespace std;
+     	cout << "template B\n";
+     	for (int i = 0; i < n; i++)
+     		cout << *arr[i] << ' ';
+     	cout << endl;
+     }
+     ```
+
+   * ```c++
+     Listing Mr. E's counts of things:
+     template A
+     13 31 103 301 310 130
+     Listing Mr. E's debts:
+     template B
+     2400 1300 1800
+     ```
+
+   * 简而言之，重载解析将寻找最匹配的函数。
+
+   * 如果只存在一个这样的函数，则选择它；
+
+   * 如果存在多个这样的函数，但其中只有一个是非模板函数，则选择该函数；
+
+   * 如果存在多个适合的函数，且它们都为模板函数，但其中有一个函数比其他函数更具体，则选择该函数。
+
+   * 如果有多个同样合适的非模板函数或模板函数，但没有一个函数比其他函数更具体，则函数调用将是不确定的，因此是错误的；
+
+   * 当然，如果不存在匹配的函数，则也是错误。
+
+3. 自己选择
+
+   在有些情况下，可通过编写合适的函数调用，引导编译器做出您希望的选择。
+
+   示例：
+
+   * ```c++
+     // ch08_15_choices.cpp -- choosing a template
+     #include <iostream>
+     
+     template<class T>
+     T lesser(T a, T b) {
+     	return a < b ? a : b;
+     }
+     
+     int lesser(int a, int b) {
+     	a = a < 0 ? -a : a;
+     	b = b < 0 ? -b : b;
+     	return a < b ? a : b;
+     }
+     
+     int main() {
+     	using namespace std;
+     	int m = 20;
+     	int n = -30;
+     	double x = 15.5;
+     	double y = 25.9;
+     
+     	cout << lesser(m, n) << endl;
+     	cout << lesser(x, y) << endl;
+     	cout << lesser<>(m, n) << endl;
+     	cout << lesser<int>(x, y) << endl;
+     
+     	return 0;
+     }
+     ```
+
+   * ```c++
+     20
+     15.5
+     -30
+     15
+     ```
+
+4. 多个参数的函数
+
+   将有多个参数的函数调用与有多个参数的原型进行匹配时，情况将非常复杂。编译器必须考虑所有参数的匹配情况。如果找到比其他可行函数都合适的函数，则选择该函数。一个函数要比其他函数都合适其所有参数的匹配程度都必须不比其他函数差，同时至少有一个参数的匹配程度比其他函数都高。
