--- a/notes/ch08 函数探幽.md
+++ b/notes/ch08 函数探幽.md
@@ -1462,4 +1462,67 @@
    将有多个参数的函数调用与有多个参数的原型进行匹配时，情况将非常复杂。编译器必须考虑所有参数的匹配情况。如果找到比其他可行函数都合适的函数，则选择该函数。一个函数要比其他函数都合适其所有参数的匹配程度都必须不比其他函数差，同时至少有一个参数的匹配程度比其他函数都高。
 
 
-   20231030
+
+#### 8.5.6 模板函数的发展
+
+1. 是什么类型
+
+* ```c++
+  template<class T1, class T2>
+  void ft(T1 x, T2 y){
+      ...
+      ?type? xpy = x + y;
+      ...
+  }
+  ```
+
+* xpy应为什么类型呢?看情况而定，见P295。
+
+2. 关键字 decltype(C++11)
+
+* 可以这样使用关键字：
+
+  * ```C++
+    int x;
+    decltype(x) y;	//make y the same type as x
+    ```
+
+* 给decltype提供的参数可以是表达式
+
+  * ```c++
+    decltype(x + y) xpy;	//make xpy the same type as x + y
+    xpy = x + y;
+    ```
+
+  * 或者：
+
+  * ```c++
+    decltype(x + y) xpy = x+ y;
+    ```
+
+* 因此可以修复模板函数ft()：
+
+  * ```c++
+    template<class T1, class T2>
+    void ft(T1 x, T2 y){
+        ...
+        decltype(x + y) xpy = x+ y;
+        ...
+    }
+    ```
+
+* decltype确定类型比较复杂，见P296。
+
+3. 另一种函数声明语法（C++11 后置返回类型）
+
+* ```c++
+  template<class T1, class T2>
+  auto gt(T1 x, T2 y) -> decltype(x + y){
+      ...
+      return x + y;
+  }
+  ```
+
+
+
+## 第九章 内存模型和名称空间
