--- a/notes/ch09 内存模型和名称空间.md
+++ b/notes/ch09 内存模型和名称空间.md
@@ -35,7 +35,7 @@
 
   * 图9.1简要地说明了在UNIX 系统中将该程序组合起来的步骤：
 
-    * ![image-20231031104927914](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231031104927914.png)
+    * ![image-20231031104927914]
 
   * 警告：在IDE中，不要将头文件加入到项目列表中，也不要在源代码文件中使用#imclude 来包含其他源代码文件。
 
